<resources>
    <string name="app_name">InClass07</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_expenses_text">Current Expenses:</string>
    <string name="goTo_add_expense_button_text">Add</string>
    <string name="message_text">There is no expense to show, Please add your expenses from the menu.</string>
    <string name="add_an_expense_text">Add An Expense</string>
    <string name="expense_name_text">Expense Name</string>
    <string name="amount_text">Amount</string>
    <string name="add_expense_button_text">Add Expense</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="close_button_text">Close</string>
    <string name="name_text">Name</string>
    <string name="category_text">Category</string>
    <string name="date_text">Date</string>
    <string name="expense_details_text">Expense Details</string>

    <string-array name="categories">
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
</resources>
